--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,5 @@
 PORT = 2000
-FRONT_URL = http://localhost:5173/
+FRONT_URL = http://localhost:5173
 MONGO_URI = mongodb://localhost:27017
 JWT_SECRET_KEY = dqjdqkdjkh
 JWT_EXPIRE = 7d
